--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -20,8 +20,8 @@ twitter: ''
 
 # Contact (edit or remove options as required)
 
-email: test@example.org
-phone: 888 888 88 88
+email: saif.sayeed@gmail.com
+phone: +44 (0)7958102691
 address:
   street: 450 Serra Mall
   city: Stanford
